# LLM_Firm_code

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
RAG_langchain/: main_rag_langchain.py  main_rag_langchain.sbatch
RAG_langchain/raw_material/iPhone16lineup/: 121029.html  121030.html  121031.html  121032.html  macrumor_iPhone17.html
RAG_langchain/wayback_fetch/: urllist.txt  wayback_fetch.sh
config/: __init__.py  config.yaml
data/: re16.txt  re16ru17.txt  sample5000_profile_ids.npy
experiments/: Experiments_description.md  experiment1.ipynb  experiment1_plot.ipynb  experiment2.ipynb  sanity_check_summary.xlsx
experiments/alternatives/: Design.csv  design100.csv  design100.ipynb  design100_a.csv  real_profiles.csv  represents108.csv
llm_belief/: __init__.py
llm_belief/analysis/: __init__.py  dimensionality.py  visualization.py
llm_belief/data_collection/: __init__.py  collector.py  prompts.py
llm_belief/models/: __init__.py  adalasso.py  scoring.py  xgboost_model.py
llm_belief/preprocessing/: __init__.py  dataset.py  profiles_generate.py  resample.py  scaler.py
llm_belief/utils/: __init__.py  attributes.py  logging_setup.py  paths.py
notebooks/: README.md
notebooks/auxiliary/: score_profiles.ipynb
notebooks/interpretability/: integrated_gradient.ipynb  partial_dependent_plot.ipynb
notebooks/method_compare/: direct_reverse.ipynb  external_knowledge.ipynb
notebooks/model_training/: plain_logit.ipynb  plain_logit_torch.ipynb  probability_logit_square.ipynb  probability_pca.ipynb  probability_pca_adp_lasso.ipynb  probability_pca_attention.ipynb  probability_tsne.ipynb  probability_tsne_attention.ipynb  probability_xgboost.ipynb
notebooks/rag/: rag_langchain.ipynb
scripts/: __init__.py  run_analysis.py  run_collection.py  run_preprocessing.py  run_rag_pipeline.sh  run_training.py
