[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-belief-elicitation"
version = "1.0.0"
description = "LLM Belief Elicitation for iPhone Specifications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]
keywords = ["llm", "belief-elicitation", "conjoint-analysis", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "captum>=0.6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "jupyter>=1.0.0",
]
rag = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "faiss-cpu>=1.7.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
llm-collect = "scripts.run_collection:main"
llm-train = "scripts.run_training:main"
llm-analyze = "scripts.run_analysis:main"

[project.urls]
Homepage = "https://github.com/your-org/llm-belief-elicitation"
Documentation = "https://github.com/your-org/llm-belief-elicitation#readme"
Repository = "https://github.com/your-org/llm-belief-elicitation"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_belief*", "config*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | data
  | output
  | logs
  | plot
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "__pycache__", "data", "output", "logs", "plot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
